--- a/LoginApp/app/src/main/res/values/strings.xml
+++ b/LoginApp/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_sign_in">SignIn</string>
     <string name="title_activity_signup">signup</string>
+    <string name="title_activity_user_home_screen">user_home_screen</string>
+    <string name="title_activity_create_game">createGame</string>
+    <string name="title_activity_view_past_entries">viewPastEntries</string>
+    <string name="title_activity_game_screen">gameScreen</string>
 
 </resources>
