--- a/LoginApp/app/src/main/res/values/strings.xml
+++ b/LoginApp/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
     <string name="title_activity_create_game">createGame</string>
     <string name="title_activity_view_past_entries">viewPastEntries</string>
     <string name="title_activity_game_screen">gameScreen</string>
-
+    <string name="title_activity_device_scan">DeviceScanActivity</string>
+    <string name="unknown_device">unknown_device</string>
+    <string name="connected">connected</string>
+    <string name="disconnected">disconnected</string>
+    <string name="unknown_service">unknown_service</string>
+    <string name="unknown_characteristic">unknown_characteristic</string>
+    <string name="no_data">no_data</string>
 </resources>
