Fixed Insert Game and View Games
Properly inserts games into the database and can now be read back from
the database as well. The insert still has hardcoded value for playerID,
this needs to be changed to a lookup of some sort.

--- a/LoginApp/app/src/main/res/values/strings.xml
+++ b/LoginApp/app/src/main/res/values/strings.xml
@@ -22,11 +22,8 @@
     <string name="label_data">Data:</string>
     <string name="label_device_address">Device address:</string>
     <string name="label_state">State:</string>
-
     <string name="title_devices">BLE Device Scan</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
-
-
 
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
@@ -34,4 +31,6 @@
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
     <string name="intro_message">intro_message</string>
+    <string name="title_activity_list_view">ListViewActivity</string>
+
 </resources>
