Added View Entries
Still want view single entry. started working on BLE send, but its
broken AF

--- a/LoginApp/app/src/main/res/values/strings.xml
+++ b/LoginApp/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="menu_stop">Stop</string>
     <string name="intro_message">intro_message</string>
     <string name="title_activity_list_view">ListViewActivity</string>
+    <string name="title_activity_entries_list">EntriesList</string>
 
 </resources>
